TODOの型ファイルを整備
